src/pages/portfolio/projects/project.module.scss
@import "~theme/colors";
@import "~theme/screens";

.logoContainer {
    padding-block: 50px;

    .logo {
        margin: 0 auto;
        width: 250px;
    }
}

.line {
    border-bottom: 1px solid $gray;
    margin-left: 5%;
    margin-right: 5%;
    margin-bottom: 35px;
    width: 90%;

    @include dark {
        border-color: rgb(93, 93, 93);
    }
}

.blog {
    width: 90%;
    margin: 0 5% 55px;
    max-width: 400px;

    .title {
        display: flex;
        align-items: center;

        a {
            color: inherit;
            text-decoration: none;
        }

        h1 {
            font-size: 2em;
            font-weight: 700;
            margin: 5px 0 0 10px;
            margin-block-start: 0px;
        }
    }

    p {
        font-size: 0.9em;
        font-weight: 400;
        max-width: 100%;
        padding: 15px 0;
        white-space: pre-line;
    }
}

.links {
    display: flex;
    gap: 10px;

    .button {
        font-size: 1em;
        font-weight: 500;
        display: inline-block;
        text-decoration: none;
        border: none;
        padding: 1em;
        transition: 0.2s;
        border-radius: 5px;
        background-color: #ffffff;
        color: #2a2a2a;
        box-shadow: var(--shadow-elevation-low);

        &:hover {
            box-shadow: var(--shadow-elevation-medium);
        }

        @include dark {
            color: $gray;
            background-color: #333333;
            border: 1px solid #555555;
        }
    }
}

.labels {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    margin: 15px 0;

    label {
        display: flex;
        align-items: center;
        gap: 10px;

        background-color: rgba(167, 167, 167, 0.3);
        border: 1px solid rgba(167, 167, 167, 0.4);
        border-radius: 5px;
        letter-spacing: 1px;
        text-transform: uppercase;
        padding: 7px 10px;
        font-weight: 500;
        font-size: 0.6em;
        color: rgb(138, 138, 138);

        @include dark {
            background-color: rgba(96, 96, 96, 0.3);
        }
    }
}

.allphotos {
    width: 100%;
    clear: inherit;

    float: none;
    margin: 0rem;
    margin-bottom: 5px;
    margin-right: 0px;
    border-radius: 0px;

    display: block;

    margin-bottom: 0px;
    transition: all 0.2s ease;

    &:first-of-type {
        position: absolute;
        top: 200px;
        right: 5%;
        display: flex;
        max-width: 200px;
        max-height: 100px;
        height: auto;
        width: auto;
        transition: 0.3s;
        position: absolute;
        filter: brightness(0);
        opacity: 0.4;

        &:hover {
            opacity: 1;
            filter: none;
        }

        @include md {
            display: none;
        }

        @include dark {
            &,
            &:hover {
                filter: brightness(100);
                opacity: 0.4;
            }
        }
    }
}

